##1 Welcome to TMW-LoF V2!

##9 Unreleased
##0 * Rebalanced melee weapons

##9 14 July 2015
##0 * Added Black Mamba spawns
##0 * Tweaked Sorfina dialog

##9 9 July 2015
##0 * Addressed debug NPC issue
##0 * Made Blacksmith axe two-handed
##0 * Fixed ugly map scarring from 2014 update
##0 * Fixed Riskim dialog hang
##0 * Fixed Blue Savior Armor bug
##0 * Improved Somber Cave spawns
##0 * Fixed hound purchase
##0 * Rewrote the Well quest
##0 * Added level cap items
##0 * Added level caps to Sorfina
##0 * Improved Ian's dialog
##0 * Added more NPC art
##0 * Finished fixing debug NPC issue
##0 * Added Black Mamba drops
##0 * Added Black Mamba mob
##0 * Prelimary EXP/JEXP fixes
##0 * Made Heroes Hold @warp accessible

##9 11 June 2015
##0 * Finished fixing magic

##9 1 June 2015
##0 * Made Savior Armor fully dyable
##0 * Added some new items
##0 * Brought back our custom Hurnscald look
##0 * Fixed item description issues and stats
##0 * Added Ozthokk's emotes
##0 * Fixed quests broken by tmwA upgrade

##3 -LoF Dev Team