@@ -4,19 +4,19 @@
   <action name="default" imageset="great-axe"/>
   <action name="attack_2hand" imageset="great-axe">
     <animation direction="down">
-      <sequence start="0" end="3" delay="140"/>
+      <sequence start="0" end="3" delay="75"/>
       <end/>
     </animation>
     <animation direction="left">
-      <sequence start="4" end="7" delay="140"/>
+      <sequence start="4" end="7" delay="75"/>
       <end/>
     </animation>
     <animation direction="up">
-      <sequence start="8" end="11" delay="140"/>
+      <sequence start="8" end="11" delay="75"/>
       <end/>
     </animation>
     <animation direction="right">
-      <sequence start="12" end="15" delay="140"/>
+      <sequence start="12" end="15" delay="75"/>
       <end/>
     </animation>
   </action>
